// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequesterOrLegalOfficer renders LO in charge for User 1`] = `
<div
  className="closed-icon-container"
>
  <LocItemDetail
    label="Legal Officer in charge"
  >
    Patrick Gielen
    <OverlayTrigger
      defaultShow={false}
      delay={500}
      overlay={
        <Tooltip
          id="vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr"
          placement="right"
        >
          vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <span>
        <br />
         
        vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr
      </span>
    </OverlayTrigger>
  </LocItemDetail>
</div>
`;

exports[`RequesterOrLegalOfficer renders logion requester for LO 1`] = `
<div
  className="closed-icon-container"
>
  <LocItemDetail
    label="Requested by"
  >
    John
     
    Doe
    <span>
      <br />
      <NewTabLink
        href=""
        iconId="loc-link"
        inline={true}
      >
        <Ellipsis
          maxWidth="250px"
        >
          85833363768713528858922097642089825569
        </Ellipsis>
      </NewTabLink>
    </span>
  </LocItemDetail>
</div>
`;

exports[`RequesterOrLegalOfficer renders polkadot requester for LO 1`] = `
<div
  className="closed-icon-container"
>
  <LocItemDetail
    label="Requested by"
  >
    John
     
    Doe
    <React.Fragment>
      <OverlayTrigger
        defaultShow={false}
        delay={500}
        overlay={
          <Tooltip
            id="Polkadot:vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz"
            placement="right"
          >
            vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <span>
          <br />
           
          <React.Fragment>
            vQxHAE33LeJYV69GCB4o4YcCgnDu8y99u5hy2751fRdxjX9kz
          </React.Fragment>
        </span>
      </OverlayTrigger>
    </React.Fragment>
  </LocItemDetail>
</div>
`;
